<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity"
    android:orientation="vertical"
    android:background="@color/grey"
    android:padding="6dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cal_title"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/result_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|bottom"
                android:background="@color/white"
                android:text="0"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:lines="3"
                tools:ignore="RtlHardcoded" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/divide_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/divide"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/multiply_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/multiply"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_7_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_7"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_8_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_8"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_9_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_9"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_4_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_4"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_5_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_5"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_6_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_6"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/subtract_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/subtract"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_1_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_1"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_2_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_2"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/number_3_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_3"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/empty_button1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/empty_button2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:layout_margin="3dp"
                    android:gravity="center"
                    android:text="@string/empty"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/number_0_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/number_0"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/point_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/point"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

                <Button
                    android:id="@+id/equal_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textSize="@dimen/button_font_size"
                    android:layout_margin="3dp"/>

            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>