<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/hello_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hello"
            android:textColor="#9575CD"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/to_cal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumpToCal"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/time_calculator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_calculator"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>